full framework structure

--- a/index.html
+++ b/index.html
@@ -5,5 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <table>
+        <tr>
+          <td><a href="#">Home</a></td>
+          <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+          <td><a href="about.html">About</a></td>
+          <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+          <td><a href="Skills.html">Skills</a></td>
+          <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+          <td><a href="contact.html">Contact</a></td>
+        </tr>
+      </table>
+    </header>
+    <main>
+      <section class="hero_section">
+        <div>
+          <h2>Hi, I'm Amir👋</h2>
+          <p>
+            Creative front-end developer with a passion for building interactive
+            web applications. I thrive in collaborative environments, working
+            closely with teams to transform ideas in to reality. Let's create
+            something great together!
+          </p>
+        </div>
+        <div>
+          <img src="images/myphotoo.png" alt="" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
