Add Icons to the skills page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My portfolio</title>
+    <title>Portfolio Homepage</title>
   </head>
   <body>
     <header>
@@ -22,7 +22,7 @@
     <main>
       <section class="hero_section">
         <div>
-          <h2>Hi, I'm Amir👋</h2>
+          <h2>Hi, I'm 👋</h2>
           <p>
             Creative front-end developer with a passion for building interactive
             web applications. I thrive in collaborative environments, working
