--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Skills Page</title>
   </head>
   <body>
     <nav>
@@ -13,5 +13,45 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+    <h1>Frontend Development Skills</h1>
+
+    <p>
+      Welcome to my skills page! Below are some of the technologies I am
+      proficient in. Icons are displayed next to the skill names.
+    </p>
+
+    <ul>
+      <li>
+        <img src="icons/html-5.png" alt="HTML5 Icon" width="100" height="100" />
+      </li>
+      <li>
+        <img
+          src="icons/js_5968292.png"
+          alt="JavaScript Icon"
+          width="100"
+          height="100"
+        />
+      </li>
+      <li>
+        <img
+          src="icons/css_919826.png"
+          alt="CSS3 Icon"
+          width="100"
+          height="100"
+        />
+      </li>
+      <li>
+        <img
+          src="icons/atom_3459313.png"
+          alt="React Icon"
+          width="100"
+          height="100"
+        />
+      </li>
+    </ul>
+    <hr />
+    <p>
+      <a href="index.html">Back to Home</a>
+    </p>
   </body>
 </html>
