Add description to the skills page

--- a/skills.html
+++ b/skills.html
@@ -16,8 +16,10 @@
     <h1>Frontend Development Skills</h1>
 
     <p>
-      Welcome to my skills page! Below are some of the technologies I am
-      proficient in. Icons are displayed next to the skill names.
+      <h3>
+          Check out the tools of my trade! These icons highlight the frontend
+          technologies I use to build websites.
+      </h3>
     </p>
 
     <ul>
