--- a/skills.html
+++ b/skills.html
@@ -13,7 +13,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1>Frontend Development Skills</h1>
+    <h1><h1>My Technical Expertise</h1></h1>
 
     <p>
       <h3>
@@ -21,36 +21,33 @@
           technologies I use to build websites.
       </h3>
     </p>
-
-    <ul>
-      <li>
-        <img src="icons/html-5.png" alt="HTML5 Icon" width="100" height="100" />
-      </li>
-      <li>
+    <p>
+        <img src="icons/html-5.png" alt="HTML5 Icon" width="100" height="100" />  
+    </P>
+     <p>
         <img
           src="icons/css_919826.png"
           alt="CSS3 Icon"
           width="100"
           height="100"
         />
-      </li>
-      <li>
+      </p>
+      <p>
         <img
           src="icons/js_5968292.png"
           alt="JavaScript Icon"
           width="100"
           height="100"
         />
-      </li>
-      <li>
+       </p>
+       <p>
         <img
           src="icons/atom_3459313.png"
           alt="React Icon"
           width="100"
           height="100"
         />
-      </li>
-    </ul>
+    </p>
     <hr />
     <p>
       <a href="index.html">Back to Home</a>
