--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,20 @@
     </h3>
     <form>
       <label for="name">Name</label>
-      <input type="text" id="name" /> <br />
+      <input type="text" id="name" required /> <br />
+      <br />
       <label for="email">Email</label>
-      <input type="email" id="email" /> <br />
+      <input
+        type="email"
+        id="email"
+        required
+        placeholder="username@gmail.com"
+      />
+      <br />
+      <br />
       <label for="name">Message</label> <br />
       <textarea id="Message" cols="30" rows="10"></textarea> <br />
+      <button type="reset">Reset</button>
       <button type="submit">Send Message</button>
     </form>
   </body>
