Adding table to the home page to put text and the image side by side

--- a/index.html
+++ b/index.html
@@ -19,21 +19,24 @@
         </tr>
       </table>
     </header>
-    <main>
-      <section class="hero_section">
-        <div>
-          <h2>Hi, I'm 👋</h2>
-          <p>
-            Creative front-end developer with a passion for building interactive
-            web applications. I thrive in collaborative environments, working
-            closely with teams to transform ideas in to reality. Let's create
-            something great together!
-          </p>
-        </div>
-        <div>
-          <img src="images/myphotoo.png" alt="" />
-        </div>
-      </section>
-    </main>
+    <section>
+      <table>
+        <tr>
+          <td>
+            <h2>Hi, I'm 👋</h2>
+            <p>
+              Creative front-end developer with a passion for building
+              interactive web applications. I thrive in collaborative
+              environments, working closely with teams to transform ideas into
+              reality. Let's create something great together!
+            </p>
+          </td>
+          <!-- Cell for the photo (right side) -->
+          <td>
+            <img src="images/myphotoo.png" alt="" />
+          </td>
+        </tr>
+      </table>
+    </section>
   </body>
 </html>
