altering normal text of the homepage to h3

--- a/index.html
+++ b/index.html
@@ -19,24 +19,28 @@
         </tr>
       </table>
     </header>
-    <section>
-      <table>
-        <tr>
-          <td>
-            <h2>Hi, I'm 👋</h2>
-            <p>
-              Creative front-end developer with a passion for building
-              interactive web applications. I thrive in collaborative
-              environments, working closely with teams to transform ideas into
-              reality. Let's create something great together!
-            </p>
-          </td>
-          <!-- Cell for the photo (right side) -->
-          <td>
-            <img src="images/myphotoo.png" alt="" />
-          </td>
-        </tr>
-      </table>
-    </section>
+    <main>
+      <section>
+        <table>
+          <tr>
+            <td>
+              <h2>Hi, I'm 👋</h2>
+              <p>
+
+                <h3>
+                    Creative front-end developer with a passion for building
+                    interactive web applications. I thrive in collaborative
+                    environments, working closely with teams to transform ideas into
+                    reality. Let's create something great together!
+                </h3>
+              </p>
+            </td>
+            <td>
+              <img src="images/myphotoo.png" alt="" />
+            </td>
+          </tr>
+        </table>
+      </section>
+    </main>
   </body>
 </html>
