--- a/about.html
+++ b/about.html
@@ -6,6 +6,13 @@
     <title>About Page</title>
 </head>
 <body>
+      <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
     <div>
               <h1>Hello! I'm [Your Name].</h1>
         </header>
