Add footer to homepage

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About Page</title>
 </head>
 <body>
+    <header>
       <nav>
       <ul>
         <li><a href="/">Home</a></li>
@@ -13,12 +14,11 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div>
-              <h1>Hello! I'm [Your Name].</h1>
-        </header>
+    <h1>Hello! I'm [Your Name].</h1>
+    </header>
 
         <section>
-            <img src="[Path to Your Photo]" alt="[Your Name] - Front-End Developer Photo" width="200">
+            <img src="images/myphotoo.png" alt="Myphoto" width="200">
             <p>I'm a dedicated <strong>Front-End Developer</strong> with 4 years of experience in creating dynamic, interactive and high-performance web applications.</p>
         </section>
 
