--- a/index.html
+++ b/index.html
@@ -42,5 +42,14 @@
         </table>
       </section>
     </main>
+    <footer>
+    <div class="footer-content">
+        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <div class="social-links">
+            <a href="#" target="_blank" rel="noopener noreferrer">GitHub</a> |
+            <a href="mailto:highendcamry1@gmail.com">Email Me</a>
+        </div>
+    </div>
+</footer>
   </body>
 </html>
