Add footer to about page

--- a/about.html
+++ b/about.html
@@ -48,12 +48,11 @@
 
         <section class="contact">
             <h2>Let's Connect</h2>
-            <p>Interested in collaborating? Check out my work or head over to my <a href="[Link to your Contact Page]">Contact page</a> to send me a message!</p>
-            <ul>
-                <li><a href="[LinkedIn Profile Link]" target="_blank">LinkedIn</a></li>
-                <li><a href="[GitHub Profile Link]" target="_blank">GitHub</a></li>
-            </ul>
+            <p>Interested in collaborating? Check out my work or head over to my <a href="contact.html">Contact page</a> to send me a message!</p>
         </section>
     </div>
+    <footer>
+        <a href="#">Back to Top</a>
+    </footer>
 </body>
 </html>
