Add testimonial images

--- a/index.html
+++ b/index.html
@@ -41,15 +41,31 @@
           </tr>
         </table>
       </section>
-    </main>
+      <section id="testimonials">
+    <h2>Client Testimonials</h2>
+
+    <blockquote>
+        <img src="images/medium-shot-smiley-man-posing-photoaidcom-cropped.jpg" alt="Jane Doe" align="left" width="100">
+        <p>"[Your Name] delivered outstanding results on our website redesign project. The attention to detail and communication throughout the process were exceptional. I highly recommend their services."</p>
+        <footer>— Jane Doe, CEO of Company A</footer>
+        <!-- A <p> tag is added here to force a line break for the next testimonial -->
+        <p></p> 
+    </blockquote>
+
+    <blockquote>
+        <img src="images/portrait-smiling-pretty-girl-shows-thumbs-up-woman-with-pierced-nose-curly-dark-hair-satisfied-with-quality-recommend-company-looking-satisfied-white-photoaidcom-cropped.jpg" alt="John Smith" align="left" width="100">
+        <p>"A pleasure to work with! [Your Name] understood our vision perfectly and translated it into a functional, beautiful product that exceeded our expectations."</p>
+        <footer>— John Smith, Project Manager at Company B</footer>
+        <p></p>
+    </blockquote>
+</section>
+      </main>
     <footer>
-    <div class="footer-content">
         <p>&copy; 2025 [Your Name]. All rights reserved.</p>
         <div class="social-links">
             <a href="#" target="_blank" rel="noopener noreferrer">GitHub</a> |
             <a href="mailto:highendcamry1@gmail.com">Email Me</a>
         </div>
-    </div>
 </footer>
   </body>
 </html>
