Add description to testimonial block

--- a/index.html
+++ b/index.html
@@ -45,22 +45,24 @@
     <h2>Client Testimonials</h2>
 
     <blockquote>
-        <img src="images/medium-shot-smiley-man-posing-photoaidcom-cropped.jpg" alt="Jane Doe" align="left" width="100">
-        <p>"[Your Name] delivered outstanding results on our website redesign project. The attention to detail and communication throughout the process were exceptional. I highly recommend their services."</p>
-        <footer>— Jane Doe, CEO of Company A</footer>
-        <!-- A <p> tag is added here to force a line break for the next testimonial -->
+        <img src="images/medium-shot-smiley-man-posing-photoaidcom-cropped.jpg" alt="Jane Doe" width="150">
+        <p>"Our team at Express Logistics couldn't be happier with the new web application," says Vihaan. "It has been an absolute game-changer for our operational efficiency."
+Vihaan highlights the app's intuitive interface and seamless workflow integration, which replaced their cumbersome legacy systems. He praises the development team's expertise and support.
+"We've seen a 30% reduction in processing time and a significant boost in team morale," Vihaan adds. "This product is a robust, effective solution that delivered exactly what we needed."</p>
+        <footer><h4>—Vihaan, CEO of Company Express</h4></footer>
         <p></p> 
     </blockquote>
 
     <blockquote>
-        <img src="images/portrait-smiling-pretty-girl-shows-thumbs-up-woman-with-pierced-nose-curly-dark-hair-satisfied-with-quality-recommend-company-looking-satisfied-white-photoaidcom-cropped.jpg" alt="John Smith" align="left" width="100">
-        <p>"A pleasure to work with! [Your Name] understood our vision perfectly and translated it into a functional, beautiful product that exceeded our expectations."</p>
-        <footer>— John Smith, Project Manager at Company B</footer>
+        <img src="images/portrait-smiling-pretty-girl-shows-thumbs-up-woman-with-pierced-nose-curly-dark-hair-satisfied-with-quality-recommend-company-looking-satisfied-white-photoaidcom-cropped.jpg" alt="John Smith" width="150">
+        <p>"The work delivered was exceptional," Candan states. "It has genuinely boosted our productivity and made daily operations much smoother. I'm incredibly happy with the results."</p>
+        <footer><h4>—Candan, Project Manager at Company algo</h4></footer>
         <p></p>
     </blockquote>
+    <br>
 </section>
       </main>
-    <footer>
+<footer>
         <p>&copy; 2025 [Your Name]. All rights reserved.</p>
         <div class="social-links">
             <a href="#" target="_blank" rel="noopener noreferrer">GitHub</a> |
