Add social media link icons to footer of homepage

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <table>
           <tr>
             <td>
-              <h2>Hi, I'm 👋</h2>
+              <h2>Hello, I'm Abubeker👋</h2>
               <p>
-
                 <h3>
                     Creative front-end developer with a passion for building
                     interactive web applications. I thrive in collaborative
@@ -36,7 +35,7 @@
               </p>
             </td>
             <td>
-              <img src="images/myphotoo.png" alt="" />
+              <img src="images/myphotoo-photoaidcom-cropped.png" alt="Myimage" />
             </td>
           </tr>
         </table>
@@ -45,7 +44,7 @@
     <h2>Client Testimonials</h2>
 
     <blockquote>
-        <img src="images/medium-shot-smiley-man-posing-photoaidcom-cropped.jpg" alt="Jane Doe" width="150">
+        <img src="images/medium-shot-smiley-man-posing-photoaidcom-cropped.jpg" alt="image of Vihaan" width="150">
         <p>"Our team at Express Logistics couldn't be happier with the new web application," says Vihaan. "It has been an absolute game-changer for our operational efficiency."
 Vihaan highlights the app's intuitive interface and seamless workflow integration, which replaced their cumbersome legacy systems. He praises the development team's expertise and support.
 "We've seen a 30% reduction in processing time and a significant boost in team morale," Vihaan adds. "This product is a robust, effective solution that delivered exactly what we needed."</p>
@@ -54,7 +53,7 @@ Vihaan highlights the app's intuitive interface and seamless workflow integratio
     </blockquote>
 
     <blockquote>
-        <img src="images/portrait-smiling-pretty-girl-shows-thumbs-up-woman-with-pierced-nose-curly-dark-hair-satisfied-with-quality-recommend-company-looking-satisfied-white-photoaidcom-cropped.jpg" alt="John Smith" width="150">
+        <img src="images/portrait-smiling-pretty-girl-shows-thumbs-up-woman-with-pierced-nose-curly-dark-hair-satisfied-with-quality-recommend-company-looking-satisfied-white-photoaidcom-cropped.jpg" alt="image of candan" width="150">
         <p>"The work delivered was exceptional," Candan states. "It has genuinely boosted our productivity and made daily operations much smoother. I'm incredibly happy with the results."</p>
         <footer><h4>—Candan, Project Manager at Company algo</h4></footer>
         <p></p>
@@ -63,11 +62,15 @@ Vihaan highlights the app's intuitive interface and seamless workflow integratio
 </section>
       </main>
 <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
-        <div class="social-links">
-            <a href="#" target="_blank" rel="noopener noreferrer">GitHub</a> |
-            <a href="mailto:highendcamry1@gmail.com">Email Me</a>
-        </div>
+  <div class="social-links">
+    <a href="https://t.me/Camry1L"><img src="icons/telegram_2111646.png" alt="Telegram icon" width="30"></a>
+    &nbsp; &nbsp; &nbsp;
+    <a href="https://t.me/Camry1L"><img src="icons/instagram_5968776.png" alt="Instagram icon" width="30"></a>
+     &nbsp; &nbsp; &nbsp;
+    <a href="mailto:highendcamry1@gmail.com"><img src="icons/gmail.png" alt="Gmail icon" width="30"></a>
+</div>
+        <p>&copy; 2025 <strong>Abubeker Adem. All rights reserved.</strong></p>
+        <a href="#">Back to top</a>
 </footer>
   </body>
 </html>
