--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1>Hello! I'm [Your Name].</h1>
+    <h1>Hello again!</h1>
     </header>
 
         <section>
