add social media links to footer of contact page

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1>Hello again!</h1>
+    <h1>Hello again👋!</h1>
     </header>
 
         <section>
@@ -42,7 +42,7 @@
 
         <section>
             <h2>Beyond the Code</h2>
-            <p>I believe the energy for building comes from moments of recharging, so i highly engage on things that relax me if i am not building."
+            <p>I believe the energy for building comes from moments of recharging,<img src="icons/beach.png" width="30"> so i highly engage on things that relax me if i am not building."
  </p>
         </section>
 
