--- a/contact.html
+++ b/contact.html
@@ -7,36 +7,70 @@
     <title>contacts</title>
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="skills.html">Skills</a></li>
-      </ul>
-    </nav>
-    <h2>Contact</h2>
-    <h3>
-      "I'd love to connect and chat about your next big idea. Let's work
-      together to bring your project to life! I'm always excited to explore new
-      opportunities and creative collaborations."
-    </h3>
-    <form>
-      <label for="name">Name</label>
-      <input type="text" id="name" required /> <br />
-      <br />
-      <label for="email">Email</label>
-      <input
-        type="email"
-        id="email"
-        required
-        placeholder="username@gmail.com"
-      />
-      <br />
-      <br />
-      <label for="name">Message</label> <br />
-      <textarea id="Message" cols="30" rows="10"></textarea> <br />
-      <button type="reset">Reset</button>
-      <button type="submit">Send Message</button>
-    </form>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="skills.html">Skills</a></li>
+        </ul>
+      </nav>
+      <h2>Contact</h2>
+    </header>
+    <main>
+       <p>
+      <h3>
+        "I'd love to connect and chat about your next big idea. Let's work
+        together to bring your project to life! I'm always excited to explore
+        new opportunities and creative collaborations."
+      </h3>
+       </p>
+      <section>
+      <form>
+        <label for="name">Name</label>
+        <input type="text" id="name" required /> <br />
+        <br />
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          required
+          placeholder="username@gmail.com"
+        />
+        <br />
+        <br />
+        <label for="name">Message</label> <br />
+        <textarea id="Message" cols="30" rows="10"></textarea> <br />
+        <button type="reset">Reset</button>
+        <button type="submit">Send Message</button>
+      </form>
+      </section>
+      <br> 
+      <br>
+      <br>
+      <footer>
+        <div>
+          <a href="https://t.me/Camry1L"
+            ><img
+              src="icons/telegram_2111646.png"
+              alt="Telegram icon"
+              width="30"
+          /></a>
+          &nbsp; &nbsp; &nbsp;
+          <a href="https://t.me/Camry1L"
+            ><img
+              src="icons/instagram_5968776.png"
+              alt="Instagram icon"
+              width="30"
+          /></a>
+          &nbsp; &nbsp; &nbsp;
+          <a href="mailto:highendcamry1@gmail.com"
+            ><img src="icons/gmail.png" alt="Gmail icon" width="30"
+          /></a>
+        </div>
+        <br>
+        <a href="#">Back to top</a>
+      </footer>
+    </main>
   </body>
 </html>
