--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <table>
           <tr>
             <td>
-              <h2>Hello, I'm Abubeker👋</h2>
+              <h2>Hello, I'm Abubeker👋!</h2>
               <p>
                 <h3>
                     Creative front-end developer with a passion for building
@@ -62,7 +62,7 @@ Vihaan highlights the app's intuitive interface and seamless workflow integratio
 </section>
       </main>
 <footer>
-  <div class="social-links">
+  <div>
     <a href="https://t.me/Camry1L"><img src="icons/telegram_2111646.png" alt="Telegram icon" width="30"></a>
     &nbsp; &nbsp; &nbsp;
     <a href="https://t.me/Camry1L"><img src="icons/instagram_5968776.png" alt="Instagram icon" width="30"></a>
