Adjust styling for input field labels

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contacts for the Little Taco Shop" />
+    <meta name="description" content="Contacts page for my personal portfolio website" />
     <title>contacts</title>
+    <link rel="stylesheet" href="css/style.css"> 
   </head>
   <body>
     <header>
@@ -28,7 +29,7 @@
       <section>
       <form>
         <label for="name">Name</label>
-        <input type="text" id="name" required /> <br />
+        <input type="text" id="name" required class="form-input"> <br />
         <br />
         <label for="email">Email</label>
         <input
@@ -36,6 +37,7 @@
           id="email"
           required
           placeholder="username@gmail.com"
+          class="form-input"
         />
         <br />
         <br />
@@ -48,6 +50,7 @@
       <br> 
       <br>
       <br>
+    </main>
       <footer>
         <div>
           <a href="https://t.me/Camry1L"
@@ -71,6 +74,5 @@
         <br>
         <a href="#">Back to top</a>
       </footer>
-    </main>
   </body>
 </html>
