--- a/skills.html
+++ b/skills.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Skills page for my personal portfolio website" />
     <title>Skills Page</title>
+    <link rel="stylesheet" href="css/style.css"> 
   </head>
   <body>
+    <header>
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
@@ -13,8 +16,10 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1><h1>My Technical Expertise</h1></h1>
-
+    <h1>My Technical Expertise</h1>
+    </header>
+    <main>
+      <section>
     <p>
       <h3>
           Check out the tools of my trade! These icons highlight the frontend
@@ -52,5 +57,7 @@
     <p>
       <a href="index.html">Back to Home</a>
     </p>
+    </section>
+   </main>
   </body>
 </html>
