--- a/about.html
+++ b/about.html
@@ -1,58 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About page for my personal portfolio website"
+    />
     <title>About Page</title>
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <header>
       <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <h1>Hello again👋!</h1>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <h1>Hello again👋!</h1>
     </header>
+    <main>
+      <section>
+        <img src="images/myphotoo.png" alt="Myphoto" width="200" />
+        <p>
+          I'm a dedicated <strong>Front-End Developer</strong> with 4 years of
+          experience in creating dynamic, interactive and high-performance web
+          applications.
+        </p>
+      </section>
 
-        <section>
-            <img src="images/myphotoo.png" alt="Myphoto" width="200">
-            <p>I'm a dedicated <strong>Front-End Developer</strong> with 4 years of experience in creating dynamic, interactive and high-performance web applications.</p>
-        </section>
+      <section>
+        <h2>My Expertise</h2>
+        <p>
+          I love solving complex problems and collaborating with teams to
+          deliver high-quality products. Here are my technical toolkits:
+        </p>
+        <ul>
+          <li><strong>Languages:</strong> HTML5, CSS3, JavaScript (ES6+)</li>
+          <li><strong>Frameworks/Libraries:</strong> React.js</li>
+          <li><strong>Styling:</strong>Tailwind CSS</li>
+          <li><strong>Tools & Platforms:</strong> Git</li>
+          <li>
+            <strong>Key Skills:</strong> Performance Optimization and API
+            Integration
+          </li>
+        </ul>
+      </section>
 
-        <section>
-            <h2>My Expertise</h2>
-            <p>I love solving complex problems and collaborating with teams to deliver high-quality products. Here are my  technical toolkits:</p>
-            <ul>
-                <li><strong>Languages:</strong> HTML5, CSS3, JavaScript (ES6+)</li>
-                <li><strong>Frameworks/Libraries:</strong> React.js</li>
-                <li><strong>Styling:</strong>Tailwind CSS</li>
-                <li><strong>Tools & Platforms:</strong> Git</li>
-                <li><strong>Key Skills:</strong> Performance Optimization and API Integration</li>
-            </ul>
-        </section>
+      <section>
+        <h2>My Approach</h2>
+        <p>
+          I strongly believe that a great user experience comes with writing
+          clean, efficient, and maintainable code.
+        </p>
+        <p>
+          Since the <strong>Front-End</strong> development is always evolving I
+          constantly learn and always explore the latest industry trends and
+          adapt to new technologies to standout.
+        </p>
+      </section>
 
-        <section class="approach">
-            <h2>My Approach</h2>
-            <p>I strongly believe that a great user experience comes with writing clean, efficient, and maintainable code.</p>
-            <p>Since the <strong>Front-End</strong> development is always evolving I constantly learn and always explore the latest industry trends and adapt to new technologies to standout.</p>
-        </section>
+      <section>
+        <h2>Beyond the Code</h2>
+        <p>
+          I believe the energy for building comes from moments of
+          recharging,<img src="icons/beach.png" width="30" />
+          so i highly engage on things that relax me if i am not building."
+        </p>
+      </section>
 
-        <section>
-            <h2>Beyond the Code</h2>
-            <p>I believe the energy for building comes from moments of recharging,<img src="icons/beach.png" width="30"> so i highly engage on things that relax me if i am not building."
- </p>
-        </section>
-
-        <section class="contact">
-            <h2>Let's Connect</h2>
-            <p>Interested in collaborating? Check out my work or head over to my <a href="contact.html">Contact page</a> to send me a message!</p>
-        </section>
-    </div>
+      <section>
+        <h2>Let's Connect</h2>
+        <p>
+          Interested in collaborating? Check out my work or head over to my
+          <a href="contact.html">Contact page</a> to send me a message!
+        </p>
+      </section>
+    </main>
     <footer>
-        <a href="#">Back to Top</a>
+      <a href="#">Back to Top</a>
     </footer>
-</body>
+  </body>
 </html>
