--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Home page for my personal portfolio website" />
     <title>Portfolio Homepage</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -40,21 +42,21 @@
           </tr>
         </table>
       </section>
-      <section id="testimonials">
+      <section>
     <h2>Client Testimonials</h2>
 
     <blockquote>
         <img src="images/medium-shot-smiley-man-posing-photoaidcom-cropped.jpg" alt="image of Vihaan" width="150">
         <p>"Our team at Express Logistics couldn't be happier with the new web application," says Vihaan. "It has been an absolute game-changer for our operational efficiency."
 Vihaan highlights the app's intuitive interface and seamless workflow integration, which replaced their cumbersome legacy systems. He praises the development team's expertise and support.
-"We've seen a 30% reduction in processing time and a significant boost in team morale," Vihaan adds. "This product is a robust, effective solution that delivered exactly what we needed."</p>
+"We've seen a 25% reduction in processing time and a significant boost in team morale," Vihaan adds. "This product is a robust, effective solution that delivered exactly what we needed."</p>
         <footer><h4>—Vihaan, CEO of Company Express</h4></footer>
         <p></p> 
     </blockquote>
 
     <blockquote>
         <img src="images/portrait-smiling-pretty-girl-shows-thumbs-up-woman-with-pierced-nose-curly-dark-hair-satisfied-with-quality-recommend-company-looking-satisfied-white-photoaidcom-cropped.jpg" alt="image of candan" width="150">
-        <p>"The work delivered was exceptional," Candan states. "It has genuinely boosted our productivity and made daily operations much smoother. I'm incredibly happy with the results."</p>
+        <p>"The work delivered was exceptional," Candan states. "It has genuinely boosted our productivity and made daily operations much smoother. I'm incredibly happy with the product"</p>
         <footer><h4>—Candan, Project Manager at Company algo</h4></footer>
         <p></p>
     </blockquote>
