add style to submit and reset button

--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
         <br />
         <label for="name">Message</label> <br />
         <textarea id="Message" cols="30" rows="10"></textarea> <br />
-        <button type="reset">Reset</button>
-        <button type="submit">Send Message</button>
+        <button type="reset" class="button">Reset</button>
+        <button type="submit" class="button">Send Message</button>
       </form>
       </section>
       <br> 
