Add style and hover effect to the navigation bar

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navigation">
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="about.html">About</a></li>
@@ -20,11 +20,11 @@
     </header>
     <main>
        <p>
-      <h3>
+      <h4>
         "I'd love to connect and chat about your next big idea. Let's work
         together to bring your project to life! I'm always excited to explore
         new opportunities and creative collaborations."
-      </h3>
+      </h4>
        </p>
       <section>
       <form>
