--- a/about.html
+++ b/about.html
@@ -8,10 +8,11 @@
       content="About page for my personal portfolio website"
     />
     <title>About Page</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navigation">
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
