--- a/skills.html
+++ b/skills.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Skills page for my personal portfolio website" />
     <title>Skills Page</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
-    <nav>
+    <nav class="navigation">
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="about.html">About</a></li>
