Add color to paragraph and h3 element and adjust the line height of the paragraph

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <table>
           <tr>
             <td>
-              <h2>Hello, I'm Abubeker👋!</h2>
+              <h1>Hello, I'm Abubeker👋!</h1>
               <p>
                 <h3>
                     Creative front-end developer with a passion for building
@@ -43,7 +43,7 @@
         </table>
       </section>
       <section>
-    <h3>Client Testimonials</h3>
+    <h3 class="testimonial">Client Testimonials</h3>
 
     <blockquote>
         <img src="images/medium-shot-smiley-man-posing-photoaidcom-cropped.jpg" alt="image of Vihaan" width="150">
