Change color of toolkits list on about page

--- a/about.html
+++ b/about.html
@@ -37,12 +37,16 @@
           I love solving complex problems and collaborating with teams to
           deliver high-quality products. Here are my technical toolkits:
         </p>
-        <ul>
-          <li><strong>Languages:</strong> HTML5, CSS3, JavaScript (ES6+)</li>
-          <li><strong>Frameworks/Libraries:</strong> React.js</li>
-          <li><strong>Styling:</strong>Tailwind CSS</li>
-          <li><strong>Tools & Platforms:</strong> Git</li>
-          <li>
+        <ul class="toolkits">
+          <li class="toolkits-desc">
+            <strong>Languages:</strong> HTML5, CSS3, JavaScript (ES6+)
+          </li>
+          <li class="toolkits-desc">
+            <strong>Frameworks/Libraries:</strong> React.js
+          </li>
+          <li class="toolkits-desc"><strong>Styling:</strong>Tailwind CSS</li>
+          <li class="toolkits-desc"><strong>Tools & Platforms:</strong> Git</li>
+          <li class="toolkits-desc">
             <strong>Key Skills:</strong> Performance Optimization and API
             Integration
           </li>
